k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-backend
  template:
    metadata:
      labels:
        app: php-backend
    spec:
      containers:
        - name: php-backend
          image: 735341528488.dkr.ecr.us-east-1.amazonaws.com/fitpro-backend:5c4bff4
          imagePullPolicy: Always
          ports:
            - containerPort: 9501
          volumeMounts:
            - name: env-config
              mountPath: /usr/src/app/.env
              subPath: .env
            - name: sendgrid-config
              mountPath: /usr/src/app/sendgrid.env
              subPath: sendgrid.env
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: env-config
          configMap:
            name: php-backend-config
        - name: sendgrid-config
          configMap:
            name: sendgrid-config
      imagePullSecrets:
        - name: ecr-credentials
