k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-backend-service
spec:
  selector:
    app: php-backend
  ports:
    - protocol: TCP
      port: 9501
      targetPort: 9501
  type: ClusterIP
