k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-frontend-service
spec:
  selector:
    app: php-frontend
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
      nodePort: 30000
  type: NodePort
